overhauling for the new architecture, and i had to remake the interface file, which now is uploaded

--- a/volatile/config.json
+++ b/volatile/config.json
@@ -18,7 +18,5 @@
     "default_report_path": "D:/backups",
     "auto_open_report_on_create": true,
     "top_graph_type": "Bar",
-    "top_graph_data": "Asset Location",
-    "bottom_graph_type": "Pie",
-    "bottom_graph_data": "Asset Type"
+    "top_graph_data": "Notes"
 }
