--- a/volatile/config.json
+++ b/volatile/config.json
@@ -4,7 +4,7 @@
         "Manufacturer": true,
         "Serial Number": true,
         "Model": true,
-        "Cost": true,
+        "Cost": false,
         "Assigned To": true,
         "Name": true,
         "Asset Location": true,
@@ -14,9 +14,12 @@
         "Notes": true
     },
     "dark_mode": true,
-    "backup_path": "D:/goofin",
-    "default_report_path": "D:/backups",
+    "backup_path": "C:/",
+    "default_report_path": "C:/",
     "auto_open_report_on_create": true,
-    "top_graph_type": "Bar",
-    "top_graph_data": "Notes"
+    "top_graph_type": "Line",
+    "top_graph_data": "Manufacturer",
+    "invisman_username": "viewer",
+    "ssh_path": "C:/Users/SpencerBraak/.ssh/id_ed25519",
+    "invisman_ip": "10.100.0.9"
 }
